--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
+  position: relative;
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   font-weight: 400;
@@ -9982,3 +9983,62 @@ h6,
   padding: 0;
   list-style-type: none;
 }
+
+#darken-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  opacity: 0;
+  z-index: 2;
+  pointer-events: none;
+  transition: opacity 0.5s, background 0.5s; /* Ajoutez une transition pour l'opacité et le fond */
+}
+
+#longue-vue {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+}
+
+.retro-container {
+  cursor: pointer;
+  /*width: 100px; /* Ajustez la largeur de la div à votre convenance */
+  /*height: 100px; /* Ajustez la hauteur de la div à votre convenance */
+  /*border-radius: 50%; */
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: radial-gradient(circle, white, white, transparent 20px); /* Ajoutez l'effet de dégradé flou autour de la div */
+  backdrop-filter: blur(10px); /* Applique un flou aux contours de la div */
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.8); /* Ajoutez une ombre floue avec une couleur blanche */
+  transition: all 0.5s; /* Ajoutez une transition pour l'effet */
+}
+
+.retro-container.active {
+  background: rgba(0, 0, 0, 0.8); /* Fond assombri en noir */
+}
+
+#retroImage {
+  width: 100%; /* Ajustez la taille de l'image pour remplir la div */
+  height: 100%; /* Ajustez la taille de l'image pour remplir la div */
+}
+
+#darken-background.active {
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.8); /* Fond assombri en noir */
+}
+
+#longue-vue.active {
+  z-index: 4;
+}
+
+#darken-background.active + #longue-vue.active {
+  z-index: 5;
+}
+
