--- a/retrostyle.css
+++ b/retrostyle.css
@@ -8,13 +8,23 @@ body {
     position: relative;
     width: 100vw;
     height: 100vh;
+    max-width: 1080px; /* ajustez selon vos besoins */
+    margin: auto; /* pour centrer le conteneur horizontalement */
 }
 
 .image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
+
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
 
 .text-overlay {
     position: absolute;
